--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,18 @@ authors = [
 
 requires-python = ">=3.10"
 license = {text = "MIT"}
+dependencies = [
+    "pyrsistent>=0.18.0",
+    "fastapi>=0.70.1",
+    "uvicorn>=0.16.0",
+    "aiohttp>=3.8.1",
+    "aiodns>=3.0.0",
+    "chardet>=4.0.0",
+    "charset-normalizer>=2.0.9",
+    "Brotli>=1.0.9",
+    "uvloop>=0.16.0",
+    "httptools>=0.3.0",
+]
 
 [project.urls]
 homepage = ""
